# Py-Imou-Open-Api

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: close_inactive_author_issues.py
.github/workflows/: ci-lint.yml  ci-test.yml  close_inactive_issues.yaml  issue_opened_auto_reply.yaml  publish.yml
docs/superpowers/plans/: 2026-06-29-py-imou-governance-alignment.md
docs/superpowers/specs/: 2026-06-29-py-imou-governance-alignment-design.md
pyimouapi/: __init__.py  const.py  device.py  exceptions.py  ha_device.py  openapi.py
script/: lint  lint-check  setup  test
tests/: test_collect_property_entities.py  test_lookup_property.py  test_update_from_detail.py
